--- a/index.html
+++ b/index.html
@@ -354,10 +354,21 @@
 
         /* --- Mobile Responsiveness --- */
         @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+                gap: 1rem;
+                padding-bottom: 1rem;
+            }
+            .nav-links {
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 15px;
+            }
             .hero h1 { font-size: 2.5rem; }
             .hero-subtitle { font-size: 1.1rem; }
             .timeline { padding-left: 20px; }
             .timeline-dot { left: -26px; }
+            section { padding: 50px 0; }
         }
         
         section {
@@ -810,6 +821,10 @@
         }
 
         initParticles();
+        animate();
+    </script>
+</body>
+</html>
         animate();
     </script>
 </body>
