--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <a href="https://github.com/Marwan7042" target="_blank" class="btn">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="https://linkedin.com/in/MarwanMahmoud" target="_blank" class="btn">
+                <a href="https://www.linkedin.com/in/marwan7042/" target="_blank" class="btn">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
             </div>
